--- a/mobile/index.html
+++ b/mobile/index.html
@@ -109,7 +109,7 @@
                        data-img="./image/weixin.png"
                        data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                        data-ajax="false">
-                    <img src="./image/weixin_icon.jpg"/>
+                    <img src="./image/weixin_icon.png"/>
                 </a>
                 </li>
             </ul>
@@ -153,8 +153,8 @@
                 <!--  条款 -->
                 <li>
                     <div class="policy">
-                        <a href="#">隐私政策</a>
-                        <a href="#">使用条款</a>
+                        <a href="#"><span>隐私政策</span></a>
+                        <a href="#"><span>使用条款</span></a>
                     </div>
 
                 </li>
