--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -37,7 +37,7 @@
             <div class="team slider">
                 <div class="content-wrapper slides">
                     <div class="content_article content_article--fast slide">
-                        <img src="./image/five.png">
+                        <img src="./image/ourteam.png">
                     </div>
                     <div class="content_article content_article--fast slide">
                         <img class="photo" src="./image/tim.png">
@@ -72,6 +72,9 @@
                     <div class="content_article content_article--fast slide">
                         <img class="photo" src="./image/tian.png">
                     </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/xinyi.png">
+                    </div>
 
                 </div>
             </div>
@@ -86,8 +89,10 @@
             <p>打造一个世界品牌</p>
         </div>
 
+        <div style="background-color: white;">
+            <img class="info_img" src="./image/hexintuandui1.png">
+        </div>
 
-        <img class="info_img" src="./image/hexintuandui1.png">
         <div class="chanpinfuwu_info">
             <h3>崇高的价值理念</h3>
             <span>我们摒弃空谈，抛开光环，走出象牙塔</span><br>
@@ -98,9 +103,12 @@
 
         </div>
 
-        <img class="info_img" src="./image/hexintuandui2.png">
+        <div style="margin-top: -2px">
+            <img class="info_img" src="./image/hexintuandui2.png">
+        </div>
+
         <div class="chanpinfuwu_info">
-            <p>顶尖的国际紫原及合作平台</p>
+            <h3>顶尖的国际资源及合作平台</h3>
             <span>连结、开放、分享全球专业与紫原</span><br>
             <span>具有共赢心态与世界合作伙伴共享行业成长</span><br>
             <span>汇聚各地一流的精英</span><br>
@@ -111,7 +119,7 @@
         <img src="./image/hexintuandui3.png"/>
 
         <div class="chanpinfuwu_info">
-            <p>庞大的市场和社会价值</p>
+            <h3>庞大的市场和社会价值</h3>
             <span>处于一个传说中千亿美元的心里健康产业</span><br>
             <span>干着推动人类健康发展刚需的事业</span><br>
             <span>接合专业知识、互联网、高科技及无线创意</span><br>
@@ -124,7 +132,7 @@
 
 
         <!-- 分享 -->
-        <div class="share">
+        <div class="share" style="background-color: #4A7FC1">
             <span>分享给好友</span>
             <ul class="share-list">
                 <li>
@@ -151,7 +159,7 @@
                        data-img="./image/weixin.png"
                        data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                        data-ajax="false">
-                    <img src="./image/weixin_icon.jpg"/>
+                    <img src="./image/weixin_icon.png"/>
                 </a>
                 </li>
             </ul>
@@ -172,6 +180,7 @@
                         <span class="text">联络我们</span>
                     </a>
                 </li>
+
                 <li class="footer_navbar_li">
                     <a  class="right" href="mailto:service@winnovator.com">
                         <img src="./image/zaixiankefu.png"/>
@@ -194,8 +203,8 @@
                 <!--  条款 -->
                 <li>
                     <div class="policy">
-                        <a href="#">隐私政策</a>
-                        <a href="#">使用条款</a>
+                        <a href="#"><span>隐私政策</span></a>
+                        <a href="#"><span>使用条款</span></a>
                     </div>
 
                 </li>
