--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -34,7 +34,7 @@
 
     <img src="./image/shehuizeren0.png" class="info_img">
 
-    <div style="background-color: white">
+    <div style="background-color: white;padding-bottom: 20px">
 
         <div style="margin: 0px;padding: 10px; font-size: 12px">
             <span>让全人类更健康更幸福是幸福创客的初心，也是终极目标</span><br>
@@ -88,7 +88,7 @@
 
     </div>
     <!-- 分享 -->
-    <div class="share">
+    <div class="share" style="background-color: #4A7FC1">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
@@ -115,7 +115,7 @@
                    data-img="./image/weixin.png"
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
-                <img src="./image/weixin_icon.jpg"/>
+                <img src="./image/weixin_icon.png"/>
             </a>
             </li>
         </ul>
@@ -136,6 +136,7 @@
                     <span class="text">联络我们</span>
                 </a>
             </li>
+
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
@@ -158,8 +159,8 @@
             <!--  条款 -->
             <li>
                 <div class="policy">
-                    <a href="#">隐私政策</a>
-                    <a href="#">使用条款</a>
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
