--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -33,7 +33,7 @@
 <div class="my_page">
 
     <img class="info_img" src="./image/us.png"/>
-    <div class="welcome_content">
+    <div class="welcome_content" style="padding-bottom:20px;">
         <div>&nbsp; &nbsp; &nbsp; 幸福創客就是把一群人聚在一起，提供資源和机会，最有效率的发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
 
         <div>&nbsp; &nbsp; &nbsp; 在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
@@ -92,9 +92,22 @@
 
         <div>5、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；&nbsp;<br />
             6、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
+
+        <h4>心理学家</h4>
+        <div>&nbsp; &nbsp; &nbsp; 你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
+        <img class="info_img"  src="./image/welcome5.png"/>
+        <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】</div>
+        <div>1.	心理学博士或心理学在读博士</div>
+        <div>2.	编写心理咨询师培训教材，讲授心理学课程</div>
+        <div>3.	人工智能实验室科研项目研究</div>
+        <div>4.	担任心理咨询师，提供心理咨询服务</div>
+        <div>5.	做幸福创客心理业务顾问，指导幸福创客员工开展心理服务</div>
+        <div>加分项：社会心理学、认知心理学、神经科学、咨询心理学</div>
+        <div>心理学家岗位招聘人数众多，岗位设计不同，以上2-5项，满足其中一项即可。</div>
     </div>
+
     <!-- 分享 -->
-    <div class="share">
+    <div class="share" style="background-color: #4A7FC1 ">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
@@ -121,7 +134,7 @@
                    data-img="./image/weixin.png"
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
-                <img src="./image/weixin_icon.jpg"/>
+                <img src="./image/weixin_icon.png"/>
             </a>
             </li>
         </ul>
@@ -142,6 +155,7 @@
                     <span class="text">联络我们</span>
                 </a>
             </li>
+
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
@@ -164,8 +178,8 @@
             <!--  条款 -->
             <li>
                 <div class="policy">
-                    <a href="#">隐私政策</a>
-                    <a href="#">使用条款</a>
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
