--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -16,9 +16,9 @@
 
 <!-- 导航 -->
 <div class="my_nav">
-    <!--<a class="weixin" href="javascript:history.go(-1);">-->
-    <!--<img src="./image/goback.png"/>-->
-    <!--</a>-->
+    <a class="weixin" href="javascript:history.go(-1);">
+    <img src="./image/goback.png"/>
+    </a>
 
     <h1 class="logo">
         <a href="./index.html">
@@ -46,92 +46,62 @@
     </video>
 
 
+
     <div class="expert">
+
+        <div style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
+            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导！他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们的”成长。
+        </div>
         <ul>
             <li>
                 <img src="image/martin.png"/>
                 <div class="expert_info">
-                    <div>马丁·塞利格曼</div>
-                    <div>(Martin Seligman)</div>
-                    <div class="expert_info_more">积极心理学之父并曾任全美心理学协会主席。曾获美国应用与预防心理学会的荣誉奖章，终身成就奖</div>
-                    <div>创始人博士导师及学術研究伙伴</div>
-                </div>
-            </li>
-            <li>
-                <img src="image/tal.png"/>
-                <div class="expert_info">
-                    <div>泰勒·本沙哈尔</div>
-                    <div>(Tal Ben-Shahar)</div>
-                    <div>哈佛大学心理学硕士、组织行为学博士</div>
-                    <div>超级畅销书《幸福的方法》作者</div>
+                    <div>Martin Seligman-学术顾问、积极心理学之父、宾夕法尼亚大学心理学教授</div>
+                    <div>“The “moon shot” galvanizing goal for positive psychology”</div>
 
                 </div>
             </li>
             <li>
-                <img src="image/carol.png"/>
+                <img src="image/felicia.png"/>
                 <div class="expert_info">
-                    <div>卡洛·考夫曼</div>
-                    <div>(Carol Kauffman)</div>
-                    <div>哈佛大学企业教练中心创始人</div>
-                    <div>企业教练心理学协会副主席</div>
+                    <div>Felicia Huppert-学术顾问、剑桥大学幸福研究所所长丶剑桥大学神经科学及心理学终身教授</div>
+                    <div>“A deep exploration of the psychology, neuroscience, human-computer interaction and artificial intelligence.”</div>
 
                 </div>
             </li>
             <li>
-                <img src="image/Felicia.png"/>
+                <img src="image/daniel.png"/>
                 <div class="expert_info">
-                    <div>弗里西亚·于佩尔</div>
-                    <div>(Felicia Huppert)</div>
-                    <div>剑桥大学幸福研究所所长、终身教授</div>
-                    <div>公司创始人博士导师</div>
+                    <div>Daniel Kahneman-学术顾问、2002年诺贝尔经济学奖得奖者、普林斯顿大学心理学教授</div>
+                    <div>“A new insight for happiness”</div>
 
-                </div>
-            </li>
-            <li>
-                <img src="image/barbara.png"/>
-                <div class="expert_info">
-                    <div>芭芭拉·弗莱迪瑞克森</div>
-                    <div>(Barbara Fredrickson)</div>
-                    <div>北卡罗莱纳大学教堂山分校荣誉教授</div>
-                    <div>提出“建立并丰富积极情绪”理论</div>
                 </div>
             </li>
             <li>
                 <img src="image/richard.png"/>
                 <div class="expert_info">
-                    <div>理查德·勒亚德</div>
-                    <div>(Richard Layard)</div>
-                    <div>伦敦经济学院经济表现中心主任</div>
-                    <div>英国最知名经济学家之一，提出“快乐经济学”理论</div>
-
+                    <div>Richard Layard 勋爵-学术顾问、伦敦政治经济学院教授、英国前首相布莱尔的首席顾问，提出“快乐经济学”理论<div>
+                    <div>“A happiness lesson from a new science”</div>
                 </div>
             </li>
             <li>
-                <img src="image/peng.png"/>
+                <img src="image/rafael.png"/>
                 <div class="expert_info">
-                    <div>彭凯平</div>
-                    <div>清华大学心理学系主任</div>
-                    <div>美国加州大学伯克利分校心理学与东亚研究终身教授</div>
-
-
-                </div>
-            </li>
-            <li>
-                <img src="image/john.png"/>
-                <div class="expert_info">
-                    <div>约翰·拉斯特</div>
-                    <div>(John Rust)</div>
-                    <div>剑桥大学心理测验学中心主任</div>
-                    <div>剑桥大学社会及心理学研究院院长</div>
+                    <div>Rafael Calvo-学术顾问、《积极的电脑运算：为了幸福和人类潜能的科技》作者、悉尼大学人机交互及软件工程系教授</div>
+                    <div>“Using computing to make a positive influence on the world”</div>
                 </div>
             </li>
         </ul>
+
+        <div style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
+            我们欢迎全球积极心理学会（GCPPA）与幸福创客成为战略伙伴，并热烈期待GCPPA的全球两百多位华人心理学家能成为我们的专家库成员。我们会尽快更新专家库的信息。
+        </div>
     </div>
 
 
 
     <!-- 分享 -->
-    <div class="share">
+    <div class="share" style="background-color: #4A7FC1">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
@@ -158,7 +128,7 @@
                    data-img="./image/weixin.png"
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
-                <img src="./image/weixin_icon.jpg"/>
+                <img src="./image/weixin_icon.png"/>
             </a>
             </li>
         </ul>
@@ -179,6 +149,7 @@
                     <span class="text">联络我们</span>
                 </a>
             </li>
+
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
@@ -201,8 +172,8 @@
             <!--  条款 -->
             <li>
                 <div class="policy">
-                    <a href="#">隐私政策</a>
-                    <a href="#">使用条款</a>
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
@@ -219,17 +190,5 @@
 
 <script type="text/javascript" src="./js/my_share.js"></script>
 
-<script>
-    $(".expert_info_more").click(function(){
-        var more = $(".expert_info_more");
-        if(more.length > 0){
-            more.addClass("xiaotian").removeClass("expert_info_more");
-        }else{
-            $(".xiaotian").addClass("expert_info_more").removeClass("xiaotian");
-        }
-
-    });
-
-</script>
 </body>
 </html>
