--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -113,7 +113,7 @@
                    data-img="./image/weixin.png"
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
-                <img src="./image/weixin_icon.jpg"/>
+                <img src="./image/weixin_icon.png"/>
             </a>
             </li>
         </ul>
@@ -134,6 +134,7 @@
                     <span class="text">联络我们</span>
                 </a>
             </li>
+
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
@@ -156,8 +157,8 @@
             <!--  条款 -->
             <li>
                 <div class="policy">
-                    <a href="#">隐私政策</a>
-                    <a href="#">使用条款</a>
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
