--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -61,7 +61,7 @@
         <span>服务他人的世界舞台</span><br>
 
     </div>
-    <img class="info_img" src="./image/chanpinwufu3.png">
+    <img class="info_img" src="./image/chanpinfuwu3.png">
     <div class="chanpinfuwu_info">
         <span>在高科技大行其道的今天</span><br>
         <span>我们竭力通过更精准的数据及分析</span><br>
@@ -71,7 +71,7 @@
     </div>
 
     <!-- 分享 -->
-    <div class="share" style="background-color: #5F65C5">
+    <div class="share" style="background-color: #4A7FC1">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
@@ -98,7 +98,7 @@
                    data-img="./image/weixin.png"
                    data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                    data-ajax="false">
-                <img src="./image/weixin_icon.jpg"/>
+                <img src="./image/weixin_icon.png"/>
             </a>
             </li>
         </ul>
@@ -119,6 +119,7 @@
                     <span class="text">联络我们</span>
                 </a>
             </li>
+
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
                     <img src="./image/zaixiankefu.png"/>
@@ -141,8 +142,8 @@
             <!--  条款 -->
             <li>
                 <div class="policy">
-                    <a href="#">隐私政策</a>
-                    <a href="#">使用条款</a>
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
