--- a/mobile/used.html
+++ b/mobile/used.html
@@ -195,7 +195,7 @@
                        data-img="./image/weixin.png"
                        data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
                        data-ajax="false">
-                    <img src="./image/weixin_icon.jpg"/>
+                    <img src="./image/weixin_icon.png"/>
                 </a>
                 </li>
             </ul>
@@ -216,6 +216,7 @@
                         <span class="text">联络我们</span>
                     </a>
                 </li>
+
                 <li class="footer_navbar_li">
                     <a  class="right" href="mailto:service@winnovator.com">
                         <img src="./image/zaixiankefu.png"/>
@@ -238,8 +239,8 @@
                 <!--  条款 -->
                 <li>
                     <div class="policy">
-                        <a href="#">隐私政策</a>
-                        <a href="#">使用条款</a>
+                        <a href="#"><span>隐私政策</span></a>
+                        <a href="#"><span>使用条款</span></a>
                     </div>
 
                 </li>
