--- a/mobile/index.html
+++ b/mobile/index.html
@@ -65,7 +65,7 @@
 
 
         <a href="./used.html">
-            <img class="info_img" src="./image/second.png"/>
+            <img class="info_img" src="./image/first_second.png"/>
         </a>
         <a href="./airobot.html">
             <img class="info_img" src="./image/third.png"/>
