--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -47,27 +47,27 @@
         <!-- 愿景列表 -->
         <ul class="expect_list">
             <li>
-                <div style="text-align: center">愿景</div>
-                <div style="margin-left: auto;margin-right: auto;width: 250px;">
+                <div style="text-align: center;font-size: 15px;">愿景</div>
+                <div style="margin-left: auto;margin-right: auto;width: 200px;">
                     <div class="small-circle" style="background-color:#018a01;"></div>
-                    <span>
+                    <span style="font-size: 14px">
                         使人们过的更健康、更幸福
                     </span>
                 </div>
             </li>
             <li>
-                <div style="text-align: center">
+                <div style="text-align: center;font-size: 15px;">
                     使命
                 </div>
-                <div style="margin-left: auto;margin-right: auto;width: 250px;">
+                <div style="margin-left: auto;margin-right: auto;width: 200px;">
                     <div class="small-circle" style="background-color:#fbed50;"></div>
-                    <span>
+                    <span style="font-size: 14px">
                        体验科技创新 缔造幸福无限
                     </span>
                 </div>
             </li>
             <li>
-                <div style="text-align: center">
+                <div style="text-align: center;font-size: 15px;">
                     价值观
                 </div>
             </li>
@@ -78,7 +78,7 @@
                     <!--</span>-->
                 <!--</div>-->
                 <img src="./image/chengjiu.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Customer obsession):<br>
                     成就所需，超越所想
                 </span>
@@ -90,7 +90,7 @@
                     <!--</span>-->
                 <!--</div>-->
                 <img src="./image/zhencheng.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Authentic):<br>
                     真诚做人、坦诚做事
                 </span>
@@ -103,7 +103,7 @@
                     <!--</span>-->
                 <!--</div>-->
                 <img src="./image/xianqu.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Be an Innovator):<br>
                     大世界、思不同
                 </span>
@@ -115,7 +115,7 @@
                     <!--</span>-->
                 <!--</div>-->
                 <img src="./image/qizhi.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Exterme):<br>
                     精益求精，超越极限
                 </span>
@@ -127,7 +127,7 @@
                     <!--</span>-->
                 <!--</div>-->
                 <img src="./image/zhuanxin.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Focus):<br>
                     少就是多，大道至简
                 </span>
@@ -139,7 +139,7 @@
                     <!--</span>-->
                     <!--</div>-->
                 <img src="./image/chuxin.png" class="circle">
-                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;">
+                <span style="height:50px; display:block; color:#FFF; margin-left: 80px;font-size: 14px;">
                     (Beginner's Mind):<br>
                     心思纯净，心存美好
                 </span>
@@ -148,7 +148,7 @@
 
 
         <!-- 分享 -->
-        <div class="share">
+        <div class="share share-blank">
             <span>分享给好友</span>
             <ul class="share-list">
                 <li>
