--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -39,7 +39,7 @@
         <div>&nbsp; &nbsp; &nbsp; 在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
 
 
-        <h4>后端工程师</h4>
+        <div class="welcome-name">后端工程师</div>
 
         <div>&nbsp; &nbsp; &nbsp; 你需要开发高性能、大规模的数据处理、搜索和分析的平台和服务，以及面向多个行业的产品</div>
 
@@ -53,11 +53,11 @@
             加分项：你做过社区类或者聊天类的产品开发&nbsp;</div>
 
 
-        <h4>IOS开发工程师</h4>
+        <div class="welcome-name">IOS开发工程师</div>
         <div>&nbsp; &nbsp; &nbsp; 你需要将设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
 
         <img class="info_img"  src="./image/welcome2.png"/>
-        <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】：</div>
+        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
         <div>
             1、对移动产品有浓厚兴趣，注重用户体验；<br />
             2、熟练掌握Objective-C语言，Mac&nbsp;OS&nbsp;X，Xcode和ios&nbsp;SDK&nbsp;开发环境；<br />
@@ -67,11 +67,11 @@
 
         <div>加分项：你做过社区类或者聊天类的apps产品开发</div>
 
-        <h4>Android开发工程师</h4>
+        <div class="welcome-name">Android开发工程师</div>
 
         <div>&nbsp; &nbsp; &nbsp; 你需要为Android手机用户开发出我们的产品，让他们体会到一键找到幸福的感觉</div>
         <img class="info_img"  src="./image/welcome3.png"/>
-        <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】<br />
+        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】<br />
             1、具备独挡一面的精神，对移动产品有浓厚兴趣；<br />
             2、具备一定的Android平台应用程序开发经验，对整个开发环节流程较为熟悉；<br />
             3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
@@ -79,11 +79,11 @@
 
         <div>加分项：你参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
 
-        <h4>社区运营</h4>
+        <div class="welcome-name">社区运营</div>
 
         <div>&nbsp; &nbsp; &nbsp; 你需要思维活跃，维持社区活跃度和粘性，让爱幸福的人在这玩起来</div>
         <img class="info_img"  src="./image/welcome4.png"/>
-        <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】</div>
+        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
 
         <div>1、社区熟悉各类社区论坛，社交媒体的规则，有敏锐的市场洞察力</div>
 
@@ -93,10 +93,10 @@
         <div>5、对新鲜事物具有强烈敏感度，善于把握网络热点话题和热门词汇；&nbsp;<br />
             6、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
 
-        <h4>心理学家</h4>
+        <div class="welcome-name">心理学家</div>
         <div>&nbsp; &nbsp; &nbsp; 你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
         <img class="info_img"  src="./image/welcome5.png"/>
-        <div style="text-align: center;margin-top: 10px">【我们希望你是这样的】</div>
+        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
         <div>1.	心理学博士或心理学在读博士</div>
         <div>2.	编写心理咨询师培训教材，讲授心理学课程</div>
         <div>3.	人工智能实验室科研项目研究</div>
@@ -107,7 +107,7 @@
     </div>
 
     <!-- 分享 -->
-    <div class="share" style="background-color: #4A7FC1 ">
+    <div class="share share-white">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
