--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -101,7 +101,7 @@
 
 
     <!-- 分享 -->
-    <div class="share" style="background-color: #4A7FC1">
+    <div class="share share-white">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
