--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -18,11 +18,11 @@
         <img src="./image/goback.png"/>
     </a>
 
-    <h1 class="logo">
+    <div class="logo">
         <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
-    </h1>
+    </div>
 
 
     <a class="account" href="./login.html">
@@ -71,7 +71,7 @@
     </div>
 
     <!-- 分享 -->
-    <div class="share" style="background-color: #4A7FC1">
+    <div class="share share-white">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
