--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -20,11 +20,11 @@
         <img src="./image/goback.png"/>
     </a>
 
-    <h1 class="logo">
+    <div class="logo">
         <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
-    </h1>
+    </div>
 
 
     <a class="account" href="./login.html">
@@ -44,6 +44,9 @@
                     </div>
                     <div class="content_article content_article--fast slide">
                         <img class="photo" src="./image/maomao.png">
+                    </div>
+                    <div class="content_article content_article--fast slide">
+                        <img class="photo" src="./image/jamie.png">
                     </div>
                     <div class="content_article content_article--fast slide">
                         <img class="photo" src="./image/yijiao.png">
