--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -18,11 +18,11 @@
         <img src="./image/goback.png"/>
     </a>
 
-    <h1 class="logo">
+    <div class="logo">
         <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
-    </h1>
+    </div>
 
 
     <a class="account" href="./login.html">
