--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -18,11 +18,11 @@
         <img src="./image/goback.png"/>
     </a>
 
-    <h1 class="logo">
+    <div class="logo">
         <a href="./index.html">
             <img alt="dji" src="./image/logo.png"/>
         </a>
-    </h1>
+    </div>
 
 
     <a class="account" href="./login.html">
@@ -34,14 +34,14 @@
 
     <img class="info_img" src="./image/us.png"/>
     <div class="welcome_content" style="padding-bottom:20px;">
-        <div>&nbsp; &nbsp; &nbsp; 幸福創客就是把一群人聚在一起，提供資源和机会，最有效率的发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
+        <div>幸福創客就是把一群人聚在一起，提供資源和机会，最有效率的发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
 
-        <div>&nbsp; &nbsp; &nbsp; 在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
+        <div>在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
 
 
         <div class="welcome-name">后端工程师</div>
 
-        <div>&nbsp; &nbsp; &nbsp; 你需要开发高性能、大规模的数据处理、搜索和分析的平台和服务，以及面向多个行业的产品</div>
+        <div>你需要开发高性能、大规模的数据处理、搜索和分析的平台和服务，以及面向多个行业的产品</div>
 
         <img src="./image/welcome1.png" class="info_img"/>
 
@@ -54,7 +54,7 @@
 
 
         <div class="welcome-name">IOS开发工程师</div>
-        <div>&nbsp; &nbsp; &nbsp; 你需要将设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
+        <div>你需要将设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
 
         <img class="info_img"  src="./image/welcome2.png"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
@@ -69,9 +69,10 @@
 
         <div class="welcome-name">Android开发工程师</div>
 
-        <div>&nbsp; &nbsp; &nbsp; 你需要为Android手机用户开发出我们的产品，让他们体会到一键找到幸福的感觉</div>
+        <div>你需要为Android手机用户开发出我们的产品，让他们体会到一键找到幸福的感觉</div>
         <img class="info_img"  src="./image/welcome3.png"/>
-        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】<br />
+        <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
+        <div>
             1、具备独挡一面的精神，对移动产品有浓厚兴趣；<br />
             2、具备一定的Android平台应用程序开发经验，对整个开发环节流程较为熟悉；<br />
             3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
@@ -81,7 +82,7 @@
 
         <div class="welcome-name">社区运营</div>
 
-        <div>&nbsp; &nbsp; &nbsp; 你需要思维活跃，维持社区活跃度和粘性，让爱幸福的人在这玩起来</div>
+        <div>你需要思维活跃，维持社区活跃度和粘性，让爱幸福的人在这玩起来</div>
         <img class="info_img"  src="./image/welcome4.png"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
 
@@ -94,7 +95,7 @@
             6、思维活跃脑洞大，逻辑清晰善探索，有一定的文字功底；</div>
 
         <div class="welcome-name">心理学家</div>
-        <div>&nbsp; &nbsp; &nbsp; 你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
+        <div>你需要具备深厚的心理学背景，了解心理学领域最前沿的资讯，让用户感受到心理学带给普通人的变化</div>
         <img class="info_img"  src="./image/welcome5.png"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】</div>
         <div>1.	心理学博士或心理学在读博士</div>
