--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -49,7 +49,7 @@
         <span>为了身边的人更健康丶更幸福</span><br>
         <span>希望拥有更多专业知识及技能的每一位</span><br>
         <span>我们</span><br>
-        <span>无条件的支持你</span><br>
+        <span>无条件支持你</span><br>
 
     </div>
 
