--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -42,7 +42,7 @@
             <span>我们每一位成员都有一颗热爱公益的心<br>
                 能为这世界做点什么，是我们常常思考的问题</span><br>
 
-            <span>现在我们能力还很有限，<br>但我们相信每一分力量<br>和付出都可以令这个我们生活的地方变的更美好</span><br>
+            <span>现在我们能力还很有限，<br>但我们相信每一分力量<br>和付出都可以令这个我们生活的地方变得更美好</span><br>
         </div>
 
         <div class="shehuizeren_info">
