--- a/mobile/zhuanjia.html
+++ b/mobile/zhuanjia.html
@@ -37,7 +37,7 @@
     <video id="example_video_1" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="none" width="100%"
            poster="./image/video_dace.png"
            data-setup="{}">
-        <source src="./video/CEO.mp4" type='video/mp4' />
+        <source src ="./video/CEO.mp4" type='video/mp4' />
         <!--<source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />-->
         <!--<source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />-->
         <track kind="captions" src="demo.captions.vtt" srclang="en" label="English"></track><!-- Tracks need an ending tag thanks to IE9 -->
@@ -50,7 +50,7 @@
     <div class="expert">
 
         <div style="margin-left: 10px;margin-right: 10px;margin-top: 20px;margin-bottom: 30px; font-size: 12px;">
-            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导！他们大都是创始团队成员的导师或研究伙伴，贴身的指导着“我们的”成长。
+            我们感谢全球顶尖的心理学家、经济学家及人工智能专家为幸福创客做出的指导！他们大都是创始团队成员的导师或研究伙伴，贴身指导着我们的成长。
         </div>
         <ul>
             <li>
@@ -94,7 +94,7 @@
         </ul>
 
         <div style="margin-left: 10px;margin-right: 10px;margin-top: 10px;margin-bottom: 20px; font-size: 12px;">
-            我们欢迎全球积极心理学会（GCPPA）与幸福创客成为战略伙伴，并热烈期待GCPPA的全球两百多位华人心理学家能成为我们的专家库成员。我们会尽快更新专家库的信息。
+            全球华人积极心理学会（GCPPA）与幸福创客成为战略合作伙伴，我们热烈欢迎GCPPA的全球两百多位华人心理学家成为我们的专家库成员。我们会尽快更新专家库的信息。
         </div>
     </div>
 
