--- a/mobile/index.html
+++ b/mobile/index.html
@@ -82,7 +82,7 @@
 
 
         <!-- 分享 -->
-        <div class="share share-white">
+        <div class="share share-blank">
             <span>分享给好友</span>
             <ul class="share-list">
                 <li>
