--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -124,7 +124,7 @@
         <div class="chanpinfuwu_info">
             <h3>庞大的市场和社会价值</h3>
             <span>处于一个传说中千亿美元的心里健康产业</span><br>
-            <span>干着推动人类健康发展刚需的事业</span><br>
+            <span>做推动着人类健康发展刚需的事业</span><br>
             <span>接合专业知识、互联网、高科技及无线创意</span><br>
             <span>只为了</span><br>
             <span>使这个世界更健康、更幸福</span><br>
