--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -60,7 +60,7 @@
             <span>PEER毅恒挚友的亲密伙伴</span>
             <div class="shehuizeren_content">
                 <div style="border-left-color: #00CB3D">
-                    我们邀请了PEER的理事长加入幸福创客的公益委员会。与PEER一起在中国致力于促进中国城乡教育水平、改善中国欠发达地区教育资源。未来，幸福创客将更多参与学生心里健康和积极情绪的项目。
+                    我们邀请了PEER的理事长加入幸福创客的公益委员会，与PEER一起在中国致力于促进中国城乡教育公平、改善中国欠发达地区教育资源。未来，幸福创客将更多参与学生心理健康和积极情绪的项目。
                 </div>
             </div>
 
@@ -70,7 +70,10 @@
             <span>梦想再寻计划</span>
             <div class="shehuizeren_content">
                 <div style="border-left-color: #F70056">
-                    幸福创客为肢体残疾及视障人士提供免费职业培训，并在培训后鼓励他们在幸福创客平台担任倾听师，通过网络和语音服务他人。我们希望提供的不仅仅是有偿的工作机会，而是透过助人自助，让生命更有意义，更多的人重拾梦想。
+                    幸福创客为肢体残疾及视障人士提供免费职业培训，并在
+                    培训后鼓励他们在幸福创客平台担任倾听师，通过网络和
+                    语音服务他人。我们希望提供的不仅仅是有偿的工作机会，
+                    而是透过助人自助，让生命更有意义、更多的人重拾梦想。
                 </div>
             </div>
 
