--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -34,7 +34,7 @@
 
     <img class="info_img" src="./image/us.png"/>
     <div class="welcome_content" style="padding-bottom:20px;">
-        <div>幸福創客就是把一群人聚在一起，提供資源和机会，最有效率的发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
+        <div>幸福創客就是把一群人聚在一起，提供資源和机会，最有效率地发挥集體的聪明才智，創造幸福平台。我們称作公司，只是为了实现这些单独个体实现不了的事情。我们存在的意义是透過科技提升人類心理幸福，使之更幸福、更健康。</div>
 
         <div>在为梦想前进的路上，我们小步快跑，努力把产品打磨的足够扎实；我们在等待志同道合的你，在这条路上我们投入时间和热情，让事情变得有意义，创造令人兴奋的产品。</div>
 
@@ -50,11 +50,11 @@
             1、计算机相关专业，2年以上java开发工作经验；<br />
             2、熟悉Java语言，熟悉主流java开源框架，深入理解OOP、OOD思想，具有较强的分析设计能力，熟悉常用设计模式；<br />
             3、熟悉mysql数据库，有良好的数据库设计能力和sql编写能力；<br />
-            加分项：你做过社区类或者聊天类的产品开发&nbsp;</div>
+            加分项：做过社区类或者聊天类的产品开发&nbsp;</div>
 
 
         <div class="welcome-name">IOS开发工程师</div>
-        <div>你需要将设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
+        <div>你需要设计师最完美的想法开发出来，推送到所有使用苹果手机的用户端；</div>
 
         <img class="info_img"  src="./image/welcome2.png"/>
         <div style="text-align: center;margin-top: 10px;font-size: 13px;">【我们希望你是这样的】：</div>
@@ -65,7 +65,7 @@
             4、具备IOS后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
             5、参与或自主进行开发过完整应用程序；熟悉App&nbsp;Store上架流程及规则；</div>
 
-        <div>加分项：你做过社区类或者聊天类的apps产品开发</div>
+        <div>加分项：做过社区类或者聊天类的apps产品开发</div>
 
         <div class="welcome-name">Android开发工程师</div>
 
@@ -78,7 +78,7 @@
             3、具备Android后台开发平台及框架原理、开发测试工具、UI设计、项目构建能力，<br />
             4、具备分析OOM具体问题，UI卡顿问题，解决不同os兼容某些控件的问题能力；</div>
 
-        <div>加分项：你参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
+        <div>加分项：参与或者自主进行开发过完整社交类或者聊天类APP应用程序</div>
 
         <div class="welcome-name">社区运营</div>
 
