--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -40,23 +40,23 @@
             <div class="content-wrapper slides">
                 <div class="content_article content_article--fast slide">
                     <img class="photo"
-                         src="./image/alading1.png">
+                         src="./image/alading1.jpg">
                 </div>
                 <div class="content_article content_article--fast slide">
                     <img class="photo"
-                         src="./image/alading2.png">
+                         src="./image/alading2.jpg">
                 </div>
                 <div class="content_article content_article--fast slide">
                     <img class="photo"
-                         src="./image/alading3.png">
+                         src="./image/alading3.jpg">
                 </div>
                 <div class="content_article content_article--fast slide">
                     <img class="photo"
-                         src="./image/alading4.png">
+                         src="./image/alading4.jpg">
                 </div>
                 <div class="content_article content_article--fast slide">
                     <img class="photo"
-                         src="./image/alading5.png">
+                         src="./image/alading5.jpg">
                 </div>
             </div>
         </div>
@@ -178,8 +178,8 @@
     var slides = $('.slides div');
 
     var glide = $('.slider').glide({
-        arrowRightText: '>',
-        arrowLeftText: '<',
+        arrowRightText: '',
+        arrowLeftText: '',
         autoplay: false,
         circular: false,
         beforeTransition: function() {
