--- a/mobile/chanpinfuwu.html
+++ b/mobile/chanpinfuwu.html
@@ -33,7 +33,7 @@
 <div class="my_page">
 
 
-    <img class="info_img" src="./image/chanpinfuwu1.png">
+    <img class="info_img" src="./image/chanpinfuwu1.jpg">
 
     <div class="chanpinfuwu_info">
         <span>当生活有任何烦恼</span><br>
@@ -43,7 +43,7 @@
 
     </div>
 
-    <img class="info_img" src="./image/four.png">
+    <img class="info_img" src="./image/four.jpg">
 
     <div class="chanpinfuwu_info">
         <span>为了身边的人更健康丶更幸福</span><br>
@@ -53,7 +53,7 @@
 
     </div>
 
-    <img class="info_img" src="./image/chanpinfuwu3.png">
+    <img class="info_img" src="./image/chanpinfuwu3.jpg">
     <div class="chanpinfuwu_info">
         <span>我们开放最领先的资源</span><br>
         <span>令有心理学相关专业的你更上一层楼</span><br>
@@ -61,7 +61,7 @@
         <span>服务他人的世界舞台</span><br>
 
     </div>
-    <img class="info_img" src="./image/chanpinfuwu4.png">
+    <img class="info_img" src="./image/chanpinfuwu4.jpg">
     <div class="chanpinfuwu_info">
         <span>在高科技大行其道的今天</span><br>
         <span>我们竭力通过更精准的数据及分析</span><br>
