--- a/mobile/index.html
+++ b/mobile/index.html
@@ -65,19 +65,19 @@
 
 
         <a href="./used.html">
-            <img class="info_img" src="./image/first_second.png"/>
+            <img class="info_img" src="./image/first_second.jpg"/>
         </a>
         <a href="./airobot.html">
-            <img class="info_img" src="./image/third.png"/>
+            <img class="info_img" src="./image/third.jpg"/>
         </a>
         <!--<a href="./zhuanjia.html">-->
-            <!--<img class="info_img" src="./image/four.png"/>-->
+            <!--<img class="info_img" src="./image/four.jpg"/>-->
         <!--</a>-->
         <a href="./ourteam.html">
-            <img class="info_img" src="./image/five.png"/>
+            <img class="info_img" src="./image/five.jpg"/>
         </a>
         <a href="./welcome.html ">
-            <img class="info_img" src="./image/six.png"/>
+            <img class="info_img" src="./image/six.jpg"/>
         </a>
 
 
