--- a/mobile/ourteam.html
+++ b/mobile/ourteam.html
@@ -107,7 +107,7 @@
         </div>
 
         <div style="margin-top: -2px">
-            <img class="info_img" src="./image/hexintuandui2.png">
+            <img class="info_img" src="./image/hexintuandui2.jpg">
         </div>
 
         <div class="chanpinfuwu_info">
@@ -119,7 +119,7 @@
             <span>团结让世界更美好的力量</span><br>
 
         </div>
-        <img src="./image/hexintuandui3.png"/>
+        <img src="./image/hexintuandui3.jpg"/>
 
         <div class="chanpinfuwu_info">
             <h3>庞大的市场和社会价值</h3>
@@ -227,8 +227,8 @@
     var slides = $('.slides div');
 
     var glide = $('.slider').glide({
-        arrowRightText: '>',
-        arrowLeftText: '<',
+        arrowRightText: '',
+        arrowLeftText: '',
         autoplay: false,
         circular: false,
         beforeTransition: function() {
